--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,10 @@
     "lang" : "en",
     "name" : " ",
     "scope" : "/",
-    "display" : "standalone",
+    "display" : "fullscreen",
     "start_url" : "https://admsgfifms.herokuapp.com/",
     "short_name" : "ADM SGF-IFMS",
-    "theme_color" : "transparent",
+    "theme_color" : "#2f9e41",
     "description" : "Controle do uso de frotas do IFMS Campus Nova Andradina para Administradores",
     "orientation" : "portrait",
     "background_color" : "#2f9e41",
